envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_proxy
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 40080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          upgrade_configs:
          - upgrade_type: websocket
          route_config:
            name: local_route
            virtual_hosts:
            - name: upstream
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/__envoy__/status"
                  case_sensitive: false
                direct_response:
                  status: 200
                  body:
                    inline_string: "OK"
                decorator:
                  operation: envoy_healthcheck
                response_headers_to_add:
                  - header:
                      key: "x-request-start"
                      value: "%START_TIME%"
              - match:
                  prefix: /
                route:
                  cluster: upstream-service
          http_filters:
          - name: envoy.filters.http.oauth2
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
              config:
                token_endpoint:
                  cluster: oauth2-token-service
                  uri: https://login.microsoftonline.com/<your-azure-tenant-id>/oauth2/v2.0/token
                  timeout: 3s
                authorization_endpoint: https://login.microsoftonline.com/<your-azure-tenant-id>/oauth2/v2.0/authorize
                redirect_uri: "%REQ(x-forwarded-proto)%://%REQ(:authority)%/auth/callback"
                pass_through_matcher:
                  - name: ":path"
                    prefix_match: "/__envoy__/status"
                redirect_path_matcher:
                  path:
                    exact: /auth/callback
                signout_path:
                  path:
                    exact: /auth/signout
                credentials:
                  client_id: "<your-azure-client-id>"
                  token_secret:
                    name: token
                    sds_config:
                      path: "/etc/envoy/token-secret.yaml"
                  hmac_secret:
                    name: hmac
                    sds_config:
                      path: "/etc/envoy/hmac-secret.yaml"
                forward_bearer_token: true
                auth_scopes:
                  - openid
                  - offline_access
                  - email

          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: oauth2-token-service
    connect_timeout: 0.487s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: oauth2-token-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: login.microsoftonline.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: login.microsoftonline.com
  - name: upstream-service
    connect_timeout: 0.250s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: upstream-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: upstream-service
                port_value: 8501
